# Causomic

./: README.md  pyproject.toml  setup.cfg
data/IGF_pathway/: IGF_DiGraph.pkl  IGF_sim_data.pkl  bad_node_feature_data.csv  bad_node_protein_data.csv  cell_sim_protein_data.csv  cell_type_feature_data.csv  cell_type_protein_data.csv  high_missing_feature_data.csv  high_missing_protein_data.csv  high_rep_bulk_feature_data.csv  high_rep_bulk_protein_data.csv  high_rep_feature_data.csv  high_rep_protein_data.csv  high_rep_range_feature_data.csv  high_rep_range_protein_data.csv  igf_graph.pkl  low_rep_bulk_feature_data.csv  low_rep_bulk_protein_data.csv  low_rep_feature_data.csv  low_rep_protein_data.csv  low_rep_range_feature_data.csv  low_rep_range_protein_data.csv  med_rep_bulk_feature_data.csv  med_rep_bulk_protein_data.csv  med_rep_feature_data.csv  med_rep_protein_data.csv  med_rep_range_feature_data.csv  med_rep_range_protein_data.csv  protein_data.csv  very_high_rep_bulk_protein_data.csv  very_high_rep_protein_data.csv
data/gene_sets/: regulatory_pathways.json  test_pathways.json
data/real_data/: 001_edges.tsv  full_confound_edges.tsv  new_sox_pathway.csv  sox_pathway.csv
data/sim_data/: four_node_feature_data.csv  four_node_protein_data.csv  four_node_sim.pkl
docs/: Graph creation algorithm.docx  Modeling INDRA networks.pptx
src/MScausality/: SCM.py  SCM_numpyro.py  __init__.py  dataProcess.py  graph.py  simulation.py  (+1 more)
tests/: gene_set_testing.py
vignettes/: IGF_simulation_analysis.ipynb  Real_experiment_analysis.ipynb  Untitled.ipynb  user_manual.ipynb
(+131 files in other folders)
