##########################
# Setup.py Configuration #
##########################
[metadata]
name = causomic
version = 0.0.1-dev
description = Python code for causal modeling of proteomics data.
long_description = file: README.md
long_description_content_type = text/markdown

# URLs associated with the project
url = https://github.com/devonjkohler/CausOmic
download_url = https://github.com/devonjkohler/CausOmic/releases
project_urls =
    Bug Tracker = https://github.com/devonjkohler/CausOmic/issues
    Source Code = https://github.com/devonjkohler/CausOmic

# Author information
author = Devon Kohler
author_email = kohler.d@northeastern.edu
maintainer = Devon Kohler
maintainer_email = kohler.d@northeastern.edu

[options]
install_requires =
    networkx
    pandas
    pyro-ppl==1.8.5
    torch
    numpy
    y0
    matplotlib
    namedlist
    py3compat
    python-dotenv

# Random options
zip_safe = false
include_package_data = True
python_requires = >=3.9

# Where is my code
packages = find:
package_dir =
    = src

[options.packages.find]
where = src
